--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <script type="module" src="scripts.js"></script>
 </head>
 <body>
+    <div id="aviso-movil-horizontal">
+        <h1>
+            Por favor, gira la pantalla en modo horizontal.
+        </h1>
+    </div>
+    
+    <div id="wrapper">     
     <h1><b>Datos breves sobre la distancia de frenado</b></h1>
     <div id="padre">
         <div class="menuButtons container">
@@ -23,6 +30,7 @@
         <div id="grafico" class="graph container">
             <canvas id="chart"></canvas>
         </div>
+    </div>
     </div>
     <!-- <p>Daniela Alejandra Recalde</p> -->
     <script src="https://kit.fontawesome.com/6f1bc8fc38.js" crossorigin="anonymous"></script>
