--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <script type="module" src="scripts.js"></script>
 </head>
 <body>
-    <div id="aviso-movil-horizontal">
+    <div id="aviso-movil-horizontal" class="aviso">
         <h1>
             Por favor, gira la pantalla para ver el contenido.
         </h1>
+        <img class="fas fa-mobile-alt phone" src="" alt="">
+        <img class="fas fa-undo rotate" src="" alt="">
     </div>
     
     <div id="wrapper">     
