--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="aviso-movil-horizontal" class="aviso">
-        <h1>
+        <h1 class="texto">
             Por favor, gira la pantalla para ver el contenido.
         </h1>
         <img class="fas fa-mobile-alt phone" src="" alt="">
