--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
-    <link rel="icon" type="image/png" href="/images/icon.png" />
+    <link rel="shortcut icon" href="/icon.png">
     <script type="module" src="scripts.js"></script>
 </head>
 <body>
     <div id="aviso-movil-horizontal" class="aviso">
-            Tamaño de pantalla minimo: 635px x 635px
+            Tamaño de pantalla minimo: 635px * 635px
         <h1 class="texto">
-            Si estas en un dispositivo movil, por favor, gira la pantalla para ver el contenido.
+            Si estas en un dispositivo movil, por favor gira la pantalla para ver el contenido.
         </h1>
         <img class="fas fa-mobile-alt phone" src="" alt="">
         <img class="fas fa-undo rotate" src="" alt="">
     </div>
     
     <div id="wrapper">     
-    <h1><b>Datos breves sobre la distancia de frenado</b></h1>
+    <h1 class="title"><b>Datos breves sobre la distancia de frenado</b></h1>
     <div id="padre">
         <div class="menuButtons container">
             <h3 class="subtitle">Seleccione una categoria</h3>
