--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
-    <link rel="icon" type="image/png" href="/icon.png" />
-    <link rel="icon" type="image/png" href="https://github.com/BayronDavidMorales/Charts/blob/cf0f83290e78c068c54289c2c0128ff4383fe786/icon.png" />
+    <link rel="icon" href="/icon.ico" />
     <script type="module" src="scripts.js"></script>
 </head>
 <body>
