--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
-    <link rel="icon" href="https://github.com/BayronDavidMorales/Charts/blob/bccc0708b241d8bcf7b48fb0065edf1b24431e2e/icon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="icon.ico">
     <script type="module" src="scripts.js"></script>
 </head>
 <body>
