--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="icon.ico">
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaqD4te4NK96T2NlpfQ2wth4jthaEQNhgCGQ&usqp=CAU" />
     <script type="module" src="scripts.js"></script>
 </head>
 <body>
