--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     
     <div id="wrapper">     
-    <h1 class="title"><b>Datos breves sobre la distancia de frenado</b></h1>
+    <h1 class="title"><b>Datos sobre la distancia de frenado</b></h1>
     <div id="padre">
         <div class="menuButtons container">
             <h3 class="subtitle">Seleccione una categoria</h3>
