--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaqD4te4NK96T2NlpfQ2wth4jthaEQNhgCGQ&usqp=CAU" />
     <script type="module" src="scripts.js"></script>
+    <!-- <script type="module" src="mixed.js"></script> -->
 </head>
 <body>
     <div id="aviso-movil-horizontal" class="aviso">
@@ -25,21 +26,23 @@
     <h1 class="title"><b>Datos sobre la distancia de frenado</b></h1>
     <div id="padre">
         <div class="menuButtons container">
+            <button class="all" onclick="vehicleSelector()" title="Mostrar grafica general"><i class="fas fa-chart-line"></i></button>
             <h3 class="subtitle">Seleccione una categoria</h3>
-            <button class="heart" onclick="vehicleSelector()"><i class="fas fa-heartbeat"></i></button>
-            <button class="car" onclick="vehicleSelector(this.name)"> <i class="fas fa-car"></i></button>
-            <button class="truck" onclick="vehicleSelector()"><i class="fas fa-truck-moving"></i></button>
-            <button class="motorcycle" onclick="vehicleSelector()"><i class="fas fa-motorcycle"></i></button>
+            <button class="heart" onclick="vehicleSelector()" title="Mostrar grafica de peaton"><i class="fas fa-heartbeat"></i></button>
+            <button class="car" onclick="vehicleSelector()" title="Mostrar grafica de automovil"> <i class="fas fa-car"></i></button>
+            <button class="truck" onclick="vehicleSelector()" title="Mostrar grafica de camion"><i class="fas fa-truck-moving"></i></button>
+            <button class="motorcycle" onclick="vehicleSelector()" title="Mostrar grafica de motocicleta"><i class="fas fa-motorcycle"></i></button>
         </div>
         <div id="grafico" class="graph container">
             <canvas id="chart"></canvas>
+            <div class="legend"></div>
             <div class="instrucciones">
                 Toque los puntos de interseccion para obtener mas informacion
             </div>
         </div>
     </div>
+
     </div>
-    <!-- <p>Daniela Alejandra Recalde</p> -->
     <script src="https://kit.fontawesome.com/6f1bc8fc38.js" crossorigin="anonymous"></script>
 </body>
 </html>
