--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     
     <div id="wrapper">     
-    <h1 class="title"><b>Datos sobre la distancia de frenado</b></h1>
+    <h1 class="title"><b>Datos sobre la distancia de frenado en vehiculos</b></h1>
     <div id="padre">
         <div class="menuButtons container">
             <button class="all" onclick="vehicleSelector()" title="Mostrar grafica general"><i class="fas fa-chart-line"></i></button>
