--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     
     <div id="wrapper">     
-    <h1 class="title"><b>Datos sobre la distancia de frenado en vehiculos</b></h1>
+    <h1 class="title"><b>Datos sobre la distancia de frenado en vehículos</b></h1>
     <div id="padre">
         <div class="menuButtons container">
             <button class="all" onclick="vehicleSelector()" title="Mostrar grafica general"><i class="fas fa-chart-line"></i></button>
@@ -33,10 +33,11 @@
             <button class="heart" onclick="vehicleSelector()" title="Mostrar grafica de peaton"><i class="fas fa-heartbeat"></i></button>
         </div>
         <div id="grafico" class="graph container graficoGlobal">
-            <canvas id="chartGlobal"></canvas>
-            <div class="legend"></div>
+            <canvas id="chartGlobal" width="4" height="1"></canvas>
+            <!-- <div class="legend"></div> -->
             <div class="instrucciones">
-                Toque los puntos de interseccion para obtener mas informacion
+                Toque los puntos de interseccion para obtener mas informacion <br>
+                Oculte informacion en la grafica haciendo click sobre su categoria en la leyenda de datos
             </div>
         </div>
         <div id="grafico" class="graph container graficoIndividual">
