--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <canvas id="chart"></canvas>
             <div class="instrucciones">
                 Toque los puntos de interseccion para obtener mas informacion
+                Oculte informacion en la grafica haciendo click sobre su categoria en la leyenda de datos
             </div>
         </div>
     </div>
