--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
             <!-- <div class="legend"></div> -->
             <div class="instrucciones">
                 Toque los puntos de interseccion para obtener mas informacion <br>
-                Oculte informacion en la grafica haciendo click sobre su categoria en la leyenda de datos
+                Oculte informacion en la grafica haciendo click en sobre item en la leyenda de datos
             </div>
         </div>
         <div id="grafico" class="graph container graficoIndividual">
             <canvas id="chart"></canvas>
             <div class="instrucciones">
-                Toque los puntos de interseccion para obtener mas informacion
-                Oculte informacion en la grafica haciendo click sobre su categoria en la leyenda de datos
+                Toque los puntos de interseccion para obtener mas informacion <br>
+                Oculte informacion en la grafica haciendo click en sobre item en la leyenda de datos
             </div>
         </div>
     </div>
