interpolacion de datos

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <h1 class="title"><b>Datos sobre la distancia de frenado en vehículos</b></h1>
     <div id="padre">
         <div class="menuButtons container">
-            <button class="all" onclick="vehicleSelector()" title="Mostrar grafica general"><i class="fas fa-chart-line"></i></button>
             <h3 class="subtitle">Seleccione una categoria</h3>
+            <button class="all" onclick="vehicleSelector()" title="Mostrar grafica general"><i class="fas fa-chart-line"></i></button>
             <button class="car" onclick="vehicleSelector()" title="Mostrar grafica de automovil"> <i class="fas fa-car"></i></button>
             <button class="truck" onclick="vehicleSelector()" title="Mostrar grafica de camion"><i class="fas fa-truck-moving"></i></button>
             <button class="motorcycle" onclick="vehicleSelector()" title="Mostrar grafica de motocicleta"><i class="fas fa-motorcycle"></i></button>
@@ -37,18 +37,20 @@
             <!-- <div class="legend"></div> -->
             <div class="instrucciones">
                 Toque los puntos de interseccion para obtener mas informacion <br>
-                Oculte informacion en la grafica haciendo click en sobre item en la leyenda de datos
+                Oculte informacion en la grafica haciendo click en sobre item en la leyenda de datos <br>
+                <a href="https://github.com/BayronDavidMorales/Charts" class="git" target="_blank"><i class="fab fa-github"></i> Click aqui para ver codigo fuente</a>
             </div>
         </div>
         <div id="grafico" class="graph container graficoIndividual">
             <canvas id="chart"></canvas>
             <div class="instrucciones">
                 Toque los puntos de interseccion para obtener mas informacion <br>
-                Oculte informacion en la grafica haciendo click en sobre item en la leyenda de datos
+                Oculte informacion en la grafica haciendo click en sobre item en la leyenda de datos <br>
+                <a href="https://github.com/BayronDavidMorales/Charts" class="git" target="_blank"><i class="fab fa-github"></i> Click aqui para ver codigo fuente</a>
+                
             </div>
         </div>
     </div>
-
     </div>
     <script src="https://kit.fontawesome.com/6f1bc8fc38.js" crossorigin="anonymous"></script>
 </body>
