--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
-    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaqD4te4NK96T2NlpfQ2wth4jthaEQNhgCGQ&usqp=CAU" />
+    <link rel="icon" href="icon.png" />
     <script type="module" src="scripts.js"></script>
 </head>
 <body>
@@ -19,6 +19,9 @@
         </h1>
         <img class="fas fa-mobile-alt phone" src="" alt="">
         <img class="fas fa-undo rotate" src="" alt="">
+        <p>No podras acceder a todo el contenido desde este tipo de pantallas</p>
+        <i class="far fa-frown"></i>
+
     </div>
     
     <div id="wrapper">     
@@ -38,7 +41,10 @@
             <div class="instrucciones">
                 Toque los puntos de interseccion para obtener mas informacion <br>
                 Oculte informacion en la grafica haciendo click en sobre item en la leyenda de datos <br>
-                <a href="https://github.com/BayronDavidMorales/Charts" class="git" target="_blank"><i class="fab fa-github"></i> Click aqui para ver codigo fuente</a>
+                <i class="fab fa-github"></i>
+                <a href="https://github.com/BayronDavidMorales/Charts" class="git" target="_blank"></i> Codigo fuente</a>
+                | <i class="fas fa-database"></i> Datos suministrados por:
+                <a href="https://www.rsc.wa.gov.au/Your-Safety/Games/Physics-of-speed" target="__blank"> Road safety commission of Australia</a>
             </div>
         </div>
         <div id="grafico" class="graph container graficoIndividual">
@@ -46,7 +52,6 @@
             <div class="instrucciones">
                 Toque los puntos de interseccion para obtener mas informacion <br>
                 Oculte informacion en la grafica haciendo click en sobre item en la leyenda de datos <br>
-                <a href="https://github.com/BayronDavidMorales/Charts" class="git" target="_blank"><i class="fab fa-github"></i> Click aqui para ver codigo fuente</a>
                 
             </div>
         </div>
